[package]
name = "shc-client"
version = "0.1.0"
description = "StorageHub Client."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
array-bytes = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true, default-features = true }
kvdb = { workspace = true }
kvdb-rocksdb = { workspace = true }
lazy-static = { workspace = true }
lru = { workspace = true }
ordered-float = { workspace = true }
priority-queue = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rocksdb = { workspace = true }

# Local
pallet-file-system = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-payment-streams = { workspace = true }
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers = { workspace = true }
shc-actors-framework = { workspace = true }
shc-actors-derive = { workspace = true }
shc-blockchain-service = { workspace = true }
shc-file-transfer-service = { workspace = true }
shc-common = { workspace = true }
shc-file-manager = { workspace = true }
shc-fisherman-service = { workspace = true }
shc-forest-manager = { workspace = true }
shc-indexer-db = { workspace = true }
shc-indexer-service = { workspace = true }
shc-rpc = { workspace = true }
shp-constants = { workspace = true }
shp-file-metadata = { workspace = true }
shp-traits = { workspace = true }
shp-types = { workspace = true }

log = { workspace = true }
codec = { workspace = true }
serde = { workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, default-features = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-network-types = { workspace = true }
sc-service = { workspace = true }
sc-tracing = { workspace = true }

sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
sp-trie = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
