[package]
name = "sh-e2e"
version = "0.1.0"
edition = "2021"
authors = ["Moonsong Labs"]
description = "E2E testing for Storage Hub"
license = "GPL-3.0-only"
homepage = "https://moonsonglabs.com/"
repository = "https://github.com/Moonsong-Labs/storage-hub-runtime.git"

[dependencies]
# Substrate dependencies
subxt = { version = "0.41.0", features = ["native", "unstable-metadata"] }
subxt-signer = "0.41.0"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }

# Async runtime
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread", "macros"] }

# General utilities
env_logger = "0.10.0"
log = "0.4.21"
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.121"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Testing
async-trait = "0.1.42"

# Keep the same PolkadotSDK version as the main project
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
tracing-test = "0.2.5"
reqwest = { version = "0.12.15", features = ["json"] }
rand.workspace = true
subxt-codegen = {version   = "0.41.0", features = ["frame-metadata"] }

# Local dependencies - add as needed
# shp-constants = { path = "../primitives/constants" }
# shp-file-metadata = { path = "../primitives/file-metadata" } 